fixed nav issue and IE 8 support

--- a/template.css
+++ b/template.css
@@ -82,6 +82,12 @@ background: white;
     color: white;
 }
 
+
+ .top-bar, .top-bar.expanded .title-area {
+ 
+background: #2980b9;
+ 
+}
  
 /* Nav styles - general */
 .navigation_sidebar_widget {
